# parallel-programming

./: README.md
T0-OmpFor-MatMul-cvaraujo/: CMakeLists.txt  README.md
T0-OmpFor-MatMul-cvaraujo/src/: matmul-parallel.c  matmul-serial.c
T0-OmpFor-MatMul-cvaraujo/tests/: 2.in  3.in  4.in  5.in
T1-OmpFor-Prime-cvaraujo/: CMakeLists.txt  README.md
T1-OmpFor-Prime-cvaraujo/src/: prime-parallel.c  prime-serial.c
plasma-project-cvaraujo/: .gitignore  CMakeLists.txt  README.md  action.yml  entrypoint.sh  kahuna-ompcluster-1+2nodes.pbs  kahuna-ompcluster-1+4nodes.pbs  kahuna-ompcluster-1+8nodes.pbs  kahuna-ompcluster-1node-3procs.pbs  kahuna-openmp-tracing.pbs  kahuna-openmp.pbs
plasma-project-cvaraujo/compute/: cdesc2ge.c  cdesc2pb.c  cdesc2tr.c  cgbsv.c  cgbtrf.c  cgbtrs.c  cge2desc.c  cgeadd.c  cgeinv.c  cgelqf.c  cgelqs.c  cgels.c  cgemm.c  cgeqrf.c  cgeqrs.c  cgesv.c  cgeswp.c  cgetrf.c  cgetri.c  cgetri_aux.c  cgetrs.c  chemm.c  cher2k.c  cherk.c  chesv.c  chetrf.c  chetrs.c  clacpy.c  clangb.c  clange.c  clanhe.c  clansy.c  clantr.c  clascl.c  claset.c  clauum.c  cpb2desc.c  cpbsv.c  cpbtrf.c  cpbtrs.c  (+269 more)
plasma-project-cvaraujo/core_blas/: core_cgeadd.c  core_cgelqt.c  core_cgemm.c  core_cgeqrt.c  core_cgessq.c  core_cgeswp.c  core_cgetrf.c  core_chegst.c  core_chemm.c  core_cher2k.c  core_cherk.c  core_chessq.c  core_cheswp.c  core_clacpy.c  core_clacpy_band.c  core_clange.c  core_clanhe.c  core_clansy.c  core_clantr.c  core_clascl.c  core_claset.c  core_clauum.c  core_cpamm.c  core_cparfb.c  core_cpemv.c  core_cpotrf.c  core_csymm.c  core_csyr2k.c  core_csyrk.c  core_csyssq.c  core_ctradd.c  core_ctrmm.c  core_ctrsm.c  core_ctrssq.c  core_ctrtri.c  core_ctslqt.c  core_ctsmlq.c  core_ctsmqr.c  core_ctsqrt.c  core_cttlqt.c  (+91 more)
plasma-project-cvaraujo/include/: core_lapack_c.h  core_lapack_d.h  core_lapack_s.h  plasma_c.h  plasma_config.h  plasma_core_blas_c.h  plasma_core_blas_d.h  plasma_core_blas_ds.h  plasma_core_blas_s.h  plasma_d.h  plasma_ds.h  plasma_internal_c.h  plasma_internal_d.h  plasma_internal_ds.h  plasma_internal_s.h  (+1 more)
t2-cuda-matsum-cvaraujo/: CMakeLists.txt  README.md  kahuna_job.pbs
t2-cuda-matsum-cvaraujo/src/: matsum-parallel.cu  matsum-serial.c
t2-cuda-matsum-cvaraujo/tests/: 1.out  2.out  3.in  3.out  4.in  4.out  5.in  5.out
t3-cuda-histogram-cvaraujo/: .gitmodules  CMakeLists.txt  README.md  kahuna.pbs
t3-cuda-histogram-cvaraujo/src/: histogram-parallel.cu  histogram-serial.c
t4-cuda-smoothing-cvaraujo/: .gitmodules  CMakeLists.txt  README.md  kahuna.pbs
t4-cuda-smoothing-cvaraujo/src/: smooth-parallel.cu  smooth-serial.c
t5-omptask-zip-cvaraujo/: .gitignore  CMakeLists.txt  README.md
t5-omptask-zip-cvaraujo/src/: zip-parallel.c  zip-serial.c
t5-omptask-zip-cvaraujo/tests/: 1.in  1.out  2.in  2.out  3.in  3.out  4.in  4.out  5.in  5.out
t6-omptask-treereduction-cvaraujo/: .gitignore  CMakeLists.txt  README.md  kahuna.pbs
t7-ompcluster-matmul-cvaraujo/: .gitignore  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  kahuna.pbs
t7-ompcluster-matmul-cvaraujo/src/: matmul-parallel.c  matmul-serial.c
t7-ompcluster-matmul-cvaraujo/tests/: 1.in  3.in  4.in  5.in
(+151 files in other folders)
